--- a/TSAR/Views/Manage/ConsultantMenu.cshtml
+++ b/TSAR/Views/Manage/ConsultantMenu.cshtml
@@ -16,6 +16,14 @@
             <td><input type="button" style="height:50px;width:200px" title="Apply for Leave" value="Apply for Leave" class="btn btn-primary" onclick="location.href='@Url.Action("MyLeave", "Leaves")'" /></td>
             <td><input type="button" style="height:50px;width:200px" title="View Calendar" value="View Calendar" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Calendar")'" /></td>
         </tr>
+        <tr>
+            <td><input type="button" style="height:50px;width:200px" title="New Timesheet" value="Project Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("ProjectTimeSheet", "Timesheets")'" /></td>
+<td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+
+        </tr>
     </tbody>
 </table>
 
