--- a/TSAR/Views/Tickets/Index.cshtml
+++ b/TSAR/Views/Tickets/Index.cshtml
@@ -111,7 +111,7 @@
                     }
                     @if (item.ConsultantName == null)
                     {
-                        <input type="button" itle="Review" value="Review" class="btn btn-primary" onclick="location.href = '@Url.Action("Review", "Tickets", new {id = item.ID})'" />
+                        <input type="button" title="Review" value="Review" class="btn btn-primary" onclick="location.href = '@Url.Action("Review", "Tickets", new {id = item.ID})'" />
                     }
                 </td>
             </td>
