--- a/TSAR/Views/Timesheets/Index.cshtml
+++ b/TSAR/Views/Timesheets/Index.cshtml
@@ -16,34 +16,34 @@
     <table class="table bg-light-gray">
         <tr>
             <th>
-                <font color="white">        @Html.DisplayNameFor(model => model.Client.ClientName)</font>
+                      @Html.DisplayNameFor(model => model.Client.ClientName)
             </th>
             <th>
-                <font color="white">         @Html.DisplayNameFor(model => model.Consultant.FullName)</font>
+                      @Html.DisplayNameFor(model => model.Consultant.FullName)
             </th>
             <th>
-                <font color="white">     @Html.DisplayNameFor(model => model.CaptureDate)</font>
+                    @Html.DisplayNameFor(model => model.CaptureDate)
             </th>
             <th>
-                <font color="white">       @Html.DisplayNameFor(model => model.StartTime)</font>
+                      @Html.DisplayNameFor(model => model.StartTime)
             </th>
             <th>
-                <font color="white">       @Html.DisplayNameFor(model => model.EndTime)</font>
+                      @Html.DisplayNameFor(model => model.EndTime)
             </th>
             <th>
-                <font color="white">    @Html.DisplayNameFor(model => model.ActivityDescription)</font>
+                   @Html.DisplayNameFor(model => model.ActivityDescription)
             </th>
             <th>
-                <font color="white">     @Html.DisplayNameFor(model => model.Total)</font>
+                   @Html.DisplayNameFor(model => model.Total)
             </th>
             <th>
-                <font color="white">    @Html.DisplayNameFor(model => model.Hours)</font>
+                  @Html.DisplayNameFor(model => model.Hours)
             </th>
             <th>
-                <font color="white">    @Html.DisplayNameFor(model => model.TicketReference)</font>
+                 @Html.DisplayNameFor(model => model.TicketReference)
             </th>
             <th>
-                <font color="white">    @Html.DisplayNameFor(model => model.SignOff)</font>
+                   @Html.DisplayNameFor(model => model.SignOff)
             </th>
             <th></th>
             <th></th>
