--- a/TSAR/Views/Budgets/Details.cshtml
+++ b/TSAR/Views/Budgets/Details.cshtml
@@ -12,12 +12,13 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Client.ClientName)
+            @Html.DisplayNameFor(model => model.Project.ProjectName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Client.ClientName)
+            @Html.DisplayFor(model => model.Project.ProjectName)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Code)
         </dt>
@@ -25,6 +26,7 @@
         <dd>
             @Html.DisplayFor(model => model.Code)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Balance)
         </dt>
