--- a/TSAR/Views/Budgets/Edit.cshtml
+++ b/TSAR/Views/Budgets/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model TSAR.Models.Budget
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Create a new budget</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
@@ -13,25 +13,26 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-       
+        <h4>Budget</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
+        @Html.HiddenFor(model => model.BudgetCode)
 
         <div class="form-group">
             <div align="center">
-                @Html.LabelFor(model => model.Id, "Client Name", htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.ProjectId, "ProjectId", htmlAttributes: new { @class = "control-label" })
             </div>
-            <div class="col-md-offset-5 col-md-2">
-                @Html.DropDownList("Id", null, "--Select new--", htmlAttributes: new { @class = "form-control", style = "text-transform:uppercase;" })
-                @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+            <div class="col-md-4 col-md-offset-4">
+                @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label" })
             </div>
-            <div class="col-md-offset-5 col-md-2">
+            <div class="col-md-4 col-md-offset-4">
                 @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
             </div>
@@ -41,25 +42,23 @@
             <div align="center">
                 @Html.LabelFor(model => model.Balance, htmlAttributes: new { @class = "control-label" })
             </div>
-            <div class="col-md-offset-5 col-md-2">
+            <div class="col-md-4 col-md-offset-4">
                 @Html.EditorFor(model => model.Balance, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Balance, "", new { @class = "text-danger" })
             </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div align="center">
-            <input type="submit" id="btn" value="Create" , class="btn btn-primary" />
-        </div>
 
+
+        <div class="form-group">
+            <div class="col-md-offset-4 col-md-4">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </div>
     </div>
 }
 
-<div>
-
-    <div align="center">
-        <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
-    </div>
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
 
 @section Scripts {
