--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -28,7 +28,7 @@
     </tr>
     <tr>
         <td><input type="button" style="height:50px;width:200px" title="Ratings" value="Ratings" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Rating")'" /></td>
-        <td><input type="button" style="height:50px;width:200px" title="Budget" value="Budget" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Budget")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="Budget" value="Budget" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Budgets")'" /></td>
         <td><input type="button" style="height:50px;width:200px" title="IM Dashboard" value="IM Dashboard" class="btn btn-primary" onclick="location.href='@Url.Action("Dashboard", "Dashboard")'" /></td>
     </tr>
         <tr>
