--- a/TSAR/Views/Projects/Create.cshtml
+++ b/TSAR/Views/Projects/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Create a new Project</h2>
+<h2>Add a new project</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,37 +13,70 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h4>Projects</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        <div align="Center">
-            @Html.LabelFor(model => model.ProjectName, htmlAttributes: new { @class = "control-label" })</div>
-            <div class="col-md-4 col-md-offset-4">
-                @Html.EditorFor(model => model.ProjectName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProjectName, "", new { @class = "text-danger" })
-            </div>
-        </div>
         <div class="form-group">
-            <div align="Center">
-                @Html.LabelFor(model => model.Id, "Select Client", htmlAttributes: new { @class = "control-label" })</div>
-                <div class="col-md-4 col-md-offset-4">
+            <div align="center">
+                @Html.LabelFor(model => model.ProjectName, htmlAttributes: new { @class = "control-label" })
+            </div>
+                
+                    <div class="col-md-offset-4 col-md-4">
+                        @Html.EditorFor(model => model.ProjectName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ProjectName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label" })
+            </div>
+                <div class="col-md-offset-4 col-md-4">
                     @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
                 </div>
             </div>
 
         <div class="form-group">
-            <div align ="Center">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div align="center">
+                @Html.LabelFor(model => model.ConsultantNum, "ConsultantNum", htmlAttributes: new { @class = "control-label" })
+            </div>
+                <div class="col-md-offset-4 col-md-4">
+                    @Html.DropDownList("ConsultantNum", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.ConsultantNum, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label" })
+            </div>
+                <div class="col-md-offset-4 col-md-4">
+                    @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label " })
+                </div>
+                <div class="col-md-offset-4 col-md-4">
+                    @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-4 col-md-4">
+                <input type="submit" value="SUBMIT" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    <div align="center">
-        <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
-    </div>  
+<div align="center">
+    <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
 </div>
 
 @section Scripts {
