--- a/TSAR/Views/Projects/Delete.cshtml
+++ b/TSAR/Views/Projects/Delete.cshtml
@@ -21,11 +21,35 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Consultant.FirstName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Consultant.FirstName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ProjectName)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.ProjectName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StartDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StartDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EndDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EndDate)
         </dd>
 
     </dl>
