--- a/TSAR/Views/Projects/Index.cshtml
+++ b/TSAR/Views/Projects/Index.cshtml
@@ -5,48 +5,60 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Project</h2>
+<h2>View Projects</h2>
 
 <p>
-
     <div align="center">
         <a id="button" href="@Url.Action("Create")" class="btn btn-primary">Create</a>
     </div>
 </p>
 <div style="overflow-x: auto">
     <table class="table bg-light-gray">
+
         <tr>
             <th>
-                  @Html.DisplayNameFor(model => model.Client.ClientName)
+                @Html.DisplayNameFor(model => model.StartDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Client.ClientName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Consultant.FirstName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProjectName)
             </th>
-            @*<th>
-                    <font color="white">    @Html.DisplayNameFor(model => model.Budget.Code)</font>
-                </th>
-                <th>
-                    <font color="white">    @Html.DisplayNameFor(model => model.Budget.Balance)</font>
-                </th>*@
             <th></th>
         </tr>
 
         @foreach (var item in Model)
-        {
+            {
             <tr>
                 <td>
-                       @Html.DisplayFor(modelItem => item.Client.ClientName)
+                    @Html.DisplayFor(modelItem => item.StartDate)
                 </td>
                 <td>
-                        @Html.DisplayFor(modelItem => item.ProjectName)
-                    @*</td>
-                        <td>
-                            <font color="gold">     @Html.DisplayFor(modelItem => item.Budget.Code)</font>
-                        </td>
-                        <td>
-                            <font color="gold">     @Html.DisplayFor(modelItem => item.Budget.B)</font>
-                        </td>*@
+                    @Html.DisplayFor(modelItem => item.EndDate)
+                </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.Client.ClientName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Consultant.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProjectName)
+                </td>
+                <td>
+
+                    <input type="button" title="View Timesheets" value="View Timesheet" class="btn btn-primary" onclick="location.href = '@Url.Action("ProjectTimeSheetIndex", "Timesheets", new { id=item.ProjectId })'" />
+
+                </td>
+
+
                 <td>
                     <input type="button" title="Delete" value="Delete" class="btn btn-primary" onclick="location.href='@Url.Action("Delete", "Projects", new { id = item.ProjectId })'" />
                 </td>
@@ -56,9 +68,14 @@
                 <td>
                     <input type="button" title="Delete" value="Details" class="btn btn-primary" onclick="location.href='@Url.Action("Details", "Projects", new { id = item.ProjectId })'" />
                 </td>
-
             </tr>
         }
 
     </table>
-    </div>
+</div>
+@Html.ActionLink("Back to previous page", null, null, null, new { href = Request.UrlReferrer })
+<div>
+    <a href="@Request.UrlReferrer" class="btn btn-primary btn-lg" title="Back to list">
+        <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+    </a>
+</div>
