--- a/TSAR/Views/Shared/_LayoutOther.cshtml
+++ b/TSAR/Views/Shared/_LayoutOther.cshtml
@@ -77,19 +77,7 @@
                     <li>                       
                         @Html.ActionLink("Contact", "Index", "Home", new { @class = "page-scroll", href = "#about" }, null)
                     </li>
-                    <li>
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <a href="javascript:document.getElementById('logoutForm').submit()">Log Off</a>
-                        }
-                        else
-                        {
-                            <ul class="nav navbar-nav navbar-right">
-                                <li>@Html.ActionLink("Log In", "Login", "Account")</li>
-                                <li>@Html.ActionLink("Register", "Register", "Account")</li>
-                            </ul>
-                        }
-                    </li>
+                    
                     <li>
                         @if (User.IsInRole("Admin"))
                         {
@@ -127,11 +115,29 @@
                             </ul>
                         }
                     </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li>@Html.ActionLink("Hello " + User.Identity.GetUserName() + "!","", "", routeValues: null, htmlAttributes: new { title = "" })</li>
+                            <li> <a href="javascript:document.getElementById('logoutForm').submit()">Log Off</a></li>
+                        }
+                        else
+                        {
+                            <ul class="nav navbar-nav navbar-right">
+                                <li>@Html.ActionLink("Log In", "Login", "Account")</li>
+                                <li>@Html.ActionLink("Register", "Register", "Account")</li>
+                            </ul>
+                        }
+                    </li>
+                    </ul>
+                    
 
 
 
                  
-                </ul>
+                @*</ul>*@
             </div>
             <!-- /.navbar-collapse -->
         </div>
