--- a/TSAR/Views/Payrolls/Index.cshtml
+++ b/TSAR/Views/Payrolls/Index.cshtml
@@ -6,7 +6,7 @@
  
 <h2>Calculated Salary</h2>
  
-//Date function for current month 
+@*//Date function for current month*@ 
 <div>
     <h4>Payroll for @DateTime.Now.ToString("MMMM") </h4>
     <hr />
@@ -19,7 +19,7 @@
         <dd>
             @Html.DisplayFor(model => model.Basic)
         </dd>
-        //no of timesheets...devashen wanted it as Comission((no of timesheets) Timesheets at 10%)
+        @*no of timesheets...devashen wanted it as Comission((no of timesheets) Timesheets at 10%)*@
         <dt>
             @Html.DisplayNameFor(model => model.Comm):( @ViewBag.NoTimesheets timesheets at)
         </dt>
