--- a/TSAR/Views/Payrolls/Index.cshtml
+++ b/TSAR/Views/Payrolls/Index.cshtml
@@ -6,54 +6,53 @@
  
 <h2>Calculated Salary</h2>
  
-@*//Date function for current month*@ 
+
 <div>
     <h4>Payroll for @DateTime.Now.ToString("MMMM") </h4>
-    <hr />
-    <dl class="dl-horizontal">
+   
+    <table>
+        <tr>
+            <td>
+                <h4>Additional Information</h4>
+
+
+
+                @Html.DisplayFor(model => model.Basic)
+
+            </td>
+            <td>
+                <h4>Commission at @ViewBag.NoTimesheets of Timesheets</h4>
+
+                
+
+                @Html.DisplayFor(model => model.Comm)
+
+
+
+            </td>
+            <td>
+                <h4>Tax</h4>
+
+               
+                @Html.DisplayFor(model => model.tax)
+
+            </td>
+            <td>
+                <h4>Total</h4>
+
+            
+                @Html.DisplayFor(model => model.tax)
+                @ViewBag.NetPay
+
+            </td>
+        </tr>
+    </table>
+    
+   
+   
+        
  
-        <dt>
-            @Html.DisplayNameFor(model => model.Basic)
-        </dt>
- 
-        <dd>
-            @Html.DisplayFor(model => model.Basic)
-        </dd>
-        @*no of timesheets...devashen wanted it as Comission((no of timesheets) Timesheets at 10%)*@
-        <dt>
-            @Html.DisplayNameFor(model => model.Comm):( @ViewBag.NoTimesheets timesheets at)
-        </dt>
- 
-        <dd>
-            @Html.DisplayFor(model => model.Comm)
-        </dd>
- 
-        <dt>
-            @Html.DisplayNameFor(model => model.totPay)
-        </dt>
- 
-        <dd>
-            @Html.DisplayFor(model => model.totPay)
-        </dd>
- 
-        <dt>
-            @Html.DisplayNameFor(model => model.tax)
-        </dt>
- 
-        <dd>
-            @Html.DisplayFor(model => model.tax)
-        </dd>
- 
- 
-        <dt>
-            @Html.DisplayNameFor(model => model.total)
-        </dt>
- 
-        <dd>
-            @Html.DisplayFor(model => model.total)
-        </dd>
- 
-    </dl>
+  
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.PayrollId }) |
