--- a/MobileTsar/MobileTsar/Views/RegisterPage.xaml
+++ b/MobileTsar/MobileTsar/Views/RegisterPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:MobileTsar.ViewModels;assembly=MobileTsar"
              x:Class="MobileTsar.Views.RegisterPage"
+             BackgroundImage="TransTusks.png"
   Title="TSAR Mobile App">
   <!--<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />-->
 
