--- a/TSAR/Views/AccomodationFiles/Create.cshtml
+++ b/TSAR/Views/AccomodationFiles/Create.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group">
     <div align="center">
         <div class="col-md-offset-4 col-md-4">
-            <a id="button" href="@Url.Action("Index")" class="btn btn-primary">Back To List</a>
+            <a id="button" href="@Url.Action("SendMail")" class="btn btn-primary">Back To List</a>
         </div>
     </div>
 </div>
