--- a/MobileTsar/MobileTsar/Views/LoginPage.xaml
+++ b/MobileTsar/MobileTsar/Views/LoginPage.xaml
@@ -10,6 +10,7 @@
     <viewModels:LoginViewModel></viewModels:LoginViewModel>
   </ContentPage.BindingContext>
     <StackLayout Orientation="Vertical" Spacing="30" Padding="30" VerticalOptions="Center">
+        <Label x:Name="UserNameLabel" IsVisible="False"></Label>
     <Entry Text="{Binding Username}" Placeholder="Your Username"></Entry>
     <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Your Password"></Entry>
     <Button Command="{Binding LoginCommand}" Text="Login" Clicked="GetTimesheetsButton_OnClicked"></Button>
