--- a/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
+++ b/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
@@ -13,9 +13,10 @@
 </ContentPage.BindingContext>
 <ScrollView>
         <StackLayout  Orientation="Vertical" Spacing="30" Padding="30" VerticalOptions="Center" >
-            <Label x:Name="UsernameLabel"></Label>
-            <Label Text="Consultant Id:" TextColor="DeepSkyBlue"></Label>
-            <Picker x:Name="ConsultantPicker" SelectedIndexChanged="ConsultantPicker_OnSelectedIndexChanged"></Picker>
+            <Label x:Name="UsernameLabel" IsVisible="False"></Label>
+            <Label Text="Consultant" TextColor="DeepSkyBlue"></Label>
+            <Label Text="{Binding Source={x:Reference UsernameLabel},Path=Text}"></Label>
+            <!--<Picker x:Name="ConsultantPicker" SelectedIndexChanged="ConsultantPicker_OnSelectedIndexChanged"></Picker>-->
             <Entry x:Name="ConsultantIdLabel" Text="{Binding ConsultantNum}" IsVisible="False"></Entry>
             <Label Text="Client:" TextColor="DeepSkyBlue"></Label>        
             <Picker x:Name="ClientPicker" Title="Client Name" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
