--- a/MobileTsar/MobileTsar/Views/MyTimesheetsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/MyTimesheetsPage.xaml
@@ -3,7 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileTsar.Views.MyTimesheetsPage"
             
-             Title="My Timesheets">
+             Title="My Timesheets"             
+             >
+    <StackLayout Padding="20,10">
+        <ActivityIndicator x:Name="LoadingActivityIndicator"></ActivityIndicator>
+        <Label x:Name="FilterLabel" VerticalOptions="Center" HorizontalOptions="Center" FontSize="25"></Label>
+    <Switch x:Name="SignedSwitch" HorizontalOptions="Center" VerticalOptions="Center" Toggled="SignedSwitch_OnToggled"></Switch>
   <ListView ItemsSource="{Binding Items}"
             ItemTapped="Handle_ItemTapped"   
             HasUnevenRows="True"
@@ -38,4 +43,5 @@
     </ListView.ItemTemplate>
     
   </ListView>
+    </StackLayout>
 </ContentPage>
