Client password vault

--- a/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
+++ b/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
@@ -29,7 +29,7 @@
             <Label Text="Client Address:" TextColor="DeepSkyBlue"></Label>
             <Picker x:Name="AddressPicker" SelectedIndexChanged="AddressPicker_OnSelectedIndexChanged"></Picker>
             <Entry x:Name="AddressLabel" Text="{Binding MClientAddress}" IsVisible="False"></Entry>
-
+            <Label x:Name="AddressLabel1" Text="Client Address:" TextColor="DeepSkyBlue"></Label>
             <Button x:Name="ValidateBtn" Text="Validate" Clicked="ValidateBtn_OnClicked"></Button>
             <Button x:Name="FinishBtn" Command="{Binding AddCommand}" Text="Finish" Clicked="Button_OnClicked" IsVisible="False" ></Button>
 
