fingerprint for client password

--- a/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
@@ -4,7 +4,7 @@
              x:Class="MobileTsar.Views.ClientPasswordsPage"
              Title="Client Passwords">
     <ContentPage.Content>
-        <StackLayout Padding="20,10">
+        <StackLayout Padding="20,10" x:Name="StackLayout" IsVisible="False">
             <SearchBar Placeholder="Search clients..." IsVisible="True" TextChanged="SearchBar_OnTextChanged"></SearchBar>
             <Picker x:Name="ClientPicker" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
            <ListView x:Name="PasswordsListView" HasUnevenRows="True">
