New page for creating passwords

--- a/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
@@ -3,11 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileTsar.Views.ClientPasswordsPage"
              Title="Client Passwords">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="New" x:Name="NewPassToolbarItem" Clicked="NewPassToolbarItem_OnClicked"></ToolbarItem>
+    </ContentPage.ToolbarItems>
+    
     <ContentPage.Content>
         <StackLayout Padding="20,10" x:Name="StackLayout" IsVisible="False">
-            <SearchBar Placeholder="Search clients..." IsVisible="True" TextChanged="SearchBar_OnTextChanged"></SearchBar>
+            <SearchBar Placeholder="Search clients..." IsVisible="False" TextChanged="SearchBar_OnTextChanged"></SearchBar>
             <Picker x:Name="ClientPicker" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
-           <ListView x:Name="PasswordsListView" HasUnevenRows="True">
+           <ListView x:Name="PasswordsListView" HasUnevenRows="True" IsPullToRefreshEnabled="True" Refreshing="PasswordsListView_OnRefreshing">
                <ListView.ItemTemplate>
                    <DataTemplate>
                        <ViewCell>
