--- a/MobileTsar/MobileTsar/Views/DashboardPageMaster.xaml
+++ b/MobileTsar/MobileTsar/Views/DashboardPageMaster.xaml
@@ -7,7 +7,7 @@
     <ListView x:Name="MenuItemsListView"
               SeparatorVisibility="None"
               HasUnevenRows="true"
-              ItemsSource="{Binding MenuItems}">
+              ItemsSource="{Binding MenuItems}" >
       <ListView.Header>
         <Grid BackgroundColor="#03A9F4">
           <Grid.ColumnDefinitions>
@@ -35,7 +35,7 @@
               <Label VerticalOptions="FillAndExpand" 
                     VerticalTextAlignment="Center" 
                     Text="{Binding Title}" 
-                    FontSize="24"/>
+                    FontSize="24" IsVisible="{Binding IsVisible}"/>
             </StackLayout>
           </ViewCell>
         </DataTemplate>
